--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
           <li class="benefits__list-item">каждый месяц ТО автомобиля</li>
         </ul>
-        <img class="benefits__images" src="images/benefits.png " alt="#">
+        <img class="benefits__images" src="images/Benefits.png " alt="#">
         <div class="benefits__content">
           <p class="benefits__text">
             Вы можете выбрать один из 300 наших автомобилей, насладиться сервисом, повысить уровень жизни, не покупая
